final doctor who website
every page validated

--- a/doctor-who-10.html
+++ b/doctor-who-10.html
@@ -7,9 +7,8 @@
 
 	<body>
 		<h1> The Tenth Doctor </h1>
-		<p1> Portrayed by David Tennant </p>
-		<p2> <a href="index.html"> Return to homepage </a> </p>
-		
+		<p> Portrayed by David Tennant </p>
+		<p> <a href="index.html"> Return to homepage </a> </p>
 		<table border ="1">
 			<tr>
 			<td> <a href="index.html"> <img src="images/300/doctor-10.jpg" width="150" height="150" alt="The Tenth Doctor"/> </a> </td>
