--- a/doctor-who-01.html
+++ b/doctor-who-01.html
@@ -7,8 +7,8 @@
 
 	<body>
 		<h1> The First Doctor </h1>
-		<p1> Portrayed by William Hartnell </p>
-		<p2> <a href="index.html"> Return to homepage </a> </p>
+		<p> Portrayed by William Hartnell </p>
+		<p> <a href="index.html"> Return to homepage </a> </p>
 		<table border ="1">
 			<tr>
 			<td> <a href="index.html"> <img src="images/300/doctor-1.jpg" width="150" height="150" alt="The First Doctor"/> </a> </td> 
