--- a/doctor-who-03.html
+++ b/doctor-who-03.html
@@ -7,11 +7,11 @@
 
 	<body>
 		<h1> The Third Doctor </h1>
-		<p1> Portrayed by Jon Pertwee </p>
-		<p2> <a href="index.html"> Return to homepage </a> </p>
+		<p> Portrayed by Jon Pertwee </p>
+		<p> <a href="index.html"> Return to homepage </a> </p>
 		<table border ="1">
-			<tr>
-			<td> <a href="index.html"> <a href="index.html"> <img src="images/300/doctor-3.jpg" width="150" height="150" alt="The Third Doctor"/> </a> </td> 
+		<tr>
+			<td> <a href="index.html"> <img src="images/300/doctor-3.jpg" width="150" height="150" alt="The Third Doctor"/> </a> </td> 
 			<td> <p>The Third Doctor is the third incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by actor Jon Pertwee.</p>
 			<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, his body automatically regenerates; as a result, his physical appearance and personality change..</p></td>
 		</tr>
