--- a/doctor-who-02.html
+++ b/doctor-who-02.html
@@ -3,19 +3,21 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Dr. Who Website</title>
+		<link rel="stylesheet" type="text/css" href="../styles.css" />
 	</head>
 	<body>
 		<h1> The Second Doctor </h1>
 		<p> Portrayed by Patrick Troughton </p>
-		<p> <a href="index.html"> Return to homepage </a> </p>
-		<table border ="1">
+		<p> <a href="index.html#doctor-2"> Return to homepage </a> </p>
+		<table>
 			<tr>
-				<td> <a href="index.html"> <img src="images/300/doctor-2.jpg" width="300" height="300" alt="The Second Doctor"/> </a> </td>
-				<td> <p>The Second Doctor is the second incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by character actor Patrick Troughton. 
+				<td> <a href="index.html#doctor-2"> <img src="images/300/doctor-2.jpg" width="300" height="300" alt="The Second Doctor"/> </a> </td>
+				<td> 
+					<p>The Second Doctor is the second incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by character actor Patrick Troughton. 
 				Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. </p>
-				<p> The transformation into the Second Doctor (originally referred to as a "renewal"), a figure who was the same 'essential' character as the first but with a very different persona, was a turning point in the evolution of the series, which eventually became a critical element of the series' longevity.</p></td>
+				<p> The transformation into the Second Doctor (originally referred to as a "renewal"), a figure who was the same 'essential' character as the first but with a very different persona, was a turning point in the evolution of the series, which eventually became a critical element of the series' longevity.</p>
+				</td>
 			</tr>
-		
 		</table>
 	</body>
 </html>
