--- a/doctor-who-04.html
+++ b/doctor-who-04.html
@@ -3,17 +3,20 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Dr. Who Website</title>
+		<link rel="stylesheet" type="text/css" href="../styles.css" />
 	</head>
 	<body>
 		<h1> The Fourth Doctor </h1>
 		<p> Portrayed by Tom Baker </p>
-		<p> <a href="index.html"> Return to homepage </a> </p>
-		<table border ="1">
+		<p> <a href="index.html#doctor-4"> Return to homepage </a> </p>
+		<table>
 			<tr>
-				<td> <a href="index.html"> <img src="images/300/doctor-4.jpg" width="300" height="300" alt="The Fourth Doctor"/> </a> </td> 
-				<td> <p>The Fourth Doctor is the fourth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. 
-				He was portrayed by Tom Baker for seven consecutive seasons from December 28, 1974 (Part One of Robot) to March 21, 1981 (Part 4 of Logopolis), and remains the longest-lived incarnation of the Doctor in the show's on-screen history, counting both the classic and modern series. </p>
-				<p> Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body, changing his physical appearance and personality in the process..</p></td>
+				<td> <a href="index.html#doctor-4"> <img src="images/300/doctor-4.jpg" width="300" height="300" alt="The Fourth Doctor"/> </a> </td> 
+				<td> 
+					<p>The Fourth Doctor is the fourth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. 
+					He was portrayed by Tom Baker for seven consecutive seasons from December 28, 1974 (Part One of Robot) to March 21, 1981 (Part 4 of Logopolis), and remains the longest-lived incarnation of the Doctor in the show's on-screen history, counting both the classic and modern series. </p>
+					<p> Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body, changing his physical appearance and personality in the process..</p>
+				</td>
 			</tr>
 		</table>
 	</body>
