--- a/doctor-who-06.html
+++ b/doctor-who-06.html
@@ -3,18 +3,20 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Dr. Who Website</title>
+		<link rel="stylesheet" type="text/css" href="../styles.css" />
 	</head>
 
 	<body>
 		<h1> The Sixth Doctor </h1>
 		<p> Portrayed by Colin Baker </p>
-		<p> <a href="index.html"> Return to homepage </a> </p>
-		<table border ="1">
+		<p> <a href="index.html#doctor-6"> Return to homepage </a> </p>
+		<table>
 			<tr>
-				<td> <a href="index.html"> <img src="images/300/doctor-6.jpg" width="300" height="300" alt="The Sixth Doctor"/> </a> </td> 
-				<td> <p>The Sixth Doctor is the sixth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by Colin Baker. Although his televisual time on the series was comparatively brief and turbulent, Baker has continued as the Sixth Doctor in Big Finish's range of original Doctor Who audio adventures. </p>
-				<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. </p>
-				<p>The Sixth Doctor's brightly coloured, mismatched clothes and brash, overbearing personality set him apart from all his previous incarnations, in some ways hearkening back to the early irascibility and initial undertones of untrustworthiness of the First Doctor.</p>
+				<td> <a href="index.html#doctor-6"> <img src="images/300/doctor-6.jpg" width="300" height="300" alt="The Sixth Doctor"/> </a> </td> 
+				<td> 
+					<p>The Sixth Doctor is the sixth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by Colin Baker. Although his televisual time on the series was comparatively brief and turbulent, Baker has continued as the Sixth Doctor in Big Finish's range of original Doctor Who audio adventures. </p>
+					<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. </p>
+					<p>The Sixth Doctor's brightly coloured, mismatched clothes and brash, overbearing personality set him apart from all his previous incarnations, in some ways hearkening back to the early irascibility and initial undertones of untrustworthiness of the First Doctor.</p>
 				</td>
 			</tr>
 		</table>
